	  unregister_blockdriver() also takes the inode semaphore causing a
	  deadlock if the inode semaphore is not re-entry. (2013-11-28).
	* configs/viewtool-stm32f107:  Add board support for the ViewTool
	  STM32F103/F107 board with the STM32F107VCT6 installed.  Initial
	  check-in is the unverfied board-support framework only
	  (2013-11-30).
	* configs/viewtool-stm32f107/src/stm32_buttons.c and stm32_leds.c:
	  Add support for LEDs an buttons on the ViewTools STM32F107 board
	  (2013-11-30).
	* fs/nxffs/nxffs_initialize.c:  First of probably several changes for
	  NAND FLASH.  NAND can report read errors because of bad ECC.  Logic
	  in NXFFS must account for it and not just throw in th towel every
	  time a read fails (2013-11-30).
	* drivers/mtd/mtd_nand* and arch/arm/src/sama5/sam_nand.c:  NAND
	  accesses now work (at least with software ECC and now DMA).  Still
	  lots of testing to be done (2013-11-30).
	* fs/nxffs/nxffs_dump.c: Do not abort on a read error.  Just not
	  the error and continue.  Otherwise, we would not be able to dump
	  NAND FLASH (2013-11-30).
	* fs/nxffs:  All read error logic has been revisited and modified in
	  most places.  If we are using NAND, then read errors probably mean
	  that the block that was read contains uncorrectable bit errors.  In
	  this case, we cannot just give up and abort the operations.  Rather,
	  we need to treat read error like normal bad blocks in order to work
	  with NAND (2013-12-2).
	* fs/nxffs/Kconfig and nxffs_initialize.c:  Make the start up scan of
	  the media option. It just takes to long! (2013-12-02).
	* drivers/mtd/mtd_nand.c: Fix a typo in calculation of page number
	  (2013-12-02).
	* drivers/mtd/README.txt:  New README file (2013-12-04).
	* arch/arm/src/lm/lm_start.c:  Don't initialize .data if not running
	  from FLASH (2013-12-05).
	* fs/fat/fs_configfat.c: Fix a typo in the FAT16 formatting logic.
	  Was this ever able to format a FAT16 disk? (2013-12-05).
