@@ -6164,4 +6164,7 @@
 	  from FLASH (2013-12-05).
 	* fs/fat/fs_configfat.c: Fix a typo in the FAT16 formatting logic.
 	  Was this ever able to format a FAT16 disk? (2013-12-05).
+	* drivers/mtd/mtd_nand.c:  Check if block number is within range at
+	  the top of the loop not the bottom.  Otherwise, we will do a bogus
+	  transfer with the out-of-range block before we test it (2013-12-05).
 
